<resources>
    <string name="app_name">Share Books</string>
    <string name="user_label">Profile</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="user_email">Email</string>
    <string name="user_bio">Bio</string>
    <string name="user_button">Update Information</string>
    <string name="user_button_update">Save</string>
    <string name="select_pic">Select Picture</string>
    <string name="select_action">Select action</string>
    <string name="select_photo_gallery">Select photo from Gallery</string>
    <string name="select_photo_camera">Select photo from Camera</string>
    <string name="image_saved">Image Saved!</string>
    <string name="image_fail">Fail</string>
    <string name="all_permission_granted">All Permissions Granted Successfully</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="file_save">File Saved!</string>
    <string name="user_profile_image">Profile Image</string>
    <string name="hint_user_name">Example: John</string>
    <string name="hint_user_surname">Example: Doe</string>
    <string name="hint_user_email">Example: user@domain.com</string>
    <string name="hint_user_bio">Example: I am .....</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="register">No Account? Register here</string>
    <string name="registerButton">Register</string>


    //toolbar
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit Profile</string>
    <string name="go_to_books">Go to books</string>

    //BookProfile String (Book Informations)
    <string name="book_label">Book Profile</string>
    <string name="book_name">Name</string>
    <string name="book_author">Author</string>
    <string name="ISBN">ISBN</string>
    <string name="publisher">Publisher</string>
    <string name="edition_year">Edition Year</string>
    <string name="book_conditions">Book Conditions</string>
    <string name="scan_bar_code">Scan Barcode</string>
    <string name="take_book_picture">Take Book Picture</string>
    <string name="save_button_book">Save</string>
    <string name="book_category">Category</string>
    <string name="conditions">Conditions</string>
    <string name="facebook_app_id">194805724632575</string>
    <string name="fb_login_protocol_scheme">fb194805724632575</string>
    <string name="pick_from_gallery">Pick from Gallery</string>
    <string name="ISBN_to_be_detected"> ISBN</string>


    //Main Page strings
    <string name="Phone_auth">Phone Authentication</string>
    <string name="sign_in">Sign In</string>
    //Registration
    <string name="phone">Enter Phone number</string>
    <string name="code">Enter Code Received</string>
    <string name="send_code">Send</string>

    //menu

</resources>