<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:title="@string/edit"
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/logout"
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="always"/>

    <item
        android:title="@string/add"
        android:id="@+id/add"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/go_to_books"
        android:id="@+id/books"
        app:showAsAction="ifRoom"/>

</menu>
