<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:fontFamily="@font/luckiest_guy"
            android:text="@string/user_label"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textAllCaps="true"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="227dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/opGallery"
            android:text="@string/select_pic"
            android:layout_gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:ems="10"
            android:hint="@string/hint_user_name"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_surname"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userSurnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:hint="@string/hint_user_surname"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:text="@string/user_email"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:hint="@string/hint_user_email"
            android:ems="10"
            android:inputType="textEmailAddress" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:text="@string/user_bio"
            android:textSize="24sp"
            android:textStyle="bold" />



        <EditText
            android:id="@+id/userBioEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/textColor"
            android:hint="@string/hint_user_bio"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendData"
            android:text="@string/user_button_update"
            android:textColor="@color/White"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>